<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>hu.tosad2019.groep4</groupId>
  <artifactId>designer</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>designer</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <dependencies>
	<dependency>
	    <groupId>org.openjfx</groupId>
	    <artifactId>javafx-controls</artifactId>
	    <version>11</version>
	</dependency>
	<dependency>
	    <groupId>org.openjfx</groupId>
	    <artifactId>javafx-fxml</artifactId>
	    <version>11</version>
	</dependency>
    <!-- JSON  -->
	<dependency>
	    <groupId>javax.json</groupId>
	    <artifactId>javax.json-api</artifactId>
	    <version>1.1.4</version>
	</dependency>
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-core</artifactId>
	    <version>2.10.1</version>
	</dependency>
	<dependency>
	    <groupId>javax.json</groupId>
	    <artifactId>javax.json-api</artifactId>
	    <version>1.1.4</version>
	</dependency>
	
	<dependency>
	    <groupId>org.glassfish</groupId>
	    <artifactId>javax.json</artifactId>
	    <version>1.1.4</version>
	</dependency>

	  <dependency>
		  <groupId>org.hibernate</groupId>
		  <artifactId>hibernate-agroal</artifactId>
		  <version>5.3.15.Final</version>
		  <type>pom</type>
	  </dependency>
	  <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
	  <dependency>
		  <groupId>mysql</groupId>
		  <artifactId>mysql-connector-java</artifactId>
		  <version>8.0.15</version>
	  </dependency>
	  <!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
	  <dependency>
		  <groupId>com.oracle.ojdbc</groupId>
		  <artifactId>ojdbc10</artifactId>
		  <version>19.3.0.0</version>
	  </dependency>
  </dependencies>
  <build>
  	<pluginManagement>
  		<plugins>
  			<plugin>
			    <groupId>org.openjfx</groupId>
			    <artifactId>javafx-maven-plugin</artifactId>
			    <version>0.0.3</version>
			    <configuration>
			        <mainClass>hellofx/org.openjfx.App</mainClass>
			    </configuration>
			</plugin>
  		</plugins>
  	</pluginManagement>
  </build>
</project>
